Revert "Cleanup"
This reverts commit 5ec198efd9ff301a712a769e9f94efd3221bc543.